# scad.cat

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COPY_PASTE_FUNCTIONALITY.md  README.md  mise.toml  package-lock.json  package.json  playwright.config.js
.github/workflows/: deploy.yml
docker/: openscad.dockerfile
generators/gridfinity_extended/: gridfinity_basic_cup.scad  gridfinity_cup.json
i18n/: cat.po  en.po
models/: example.scad  example.stl
openscad-lib/: CMakeLists.txt  Dockerfile  build-wasm.sh
openscad-lib/src/: openscad_api.cpp  openscad_api.h
src/: generator.cpp  generator.h  generator_ui.cpp  generator_ui.h  i18n.h  main.cpp  scad_builder.cpp  scad_builder.h  scad_eval.cpp  scad_eval.h  viewer.cpp  viewer.h
tests/: _scratch.spec.js  paste.spec.js  scad_eval.spec.js  smoke.spec.js
web/: shell.html
web/openscad-wasm-dist/: openscad.js
